hprt-sdk/Samples/Source/MFC/PrinterBase.h

typedef int(__stdcall*FormatError)(int error_no, int langid, char* buf, int pos, int buf_size);
typedef int(__stdcall*PrinterCreator)(void** phandle, const  _TCHAR* model);
typedef int(__stdcall*PortOpen)(void* handle, const _TCHAR*  io_settings);
typedef int(__stdcall*PortClose)(void* handle);
typedef int(__stdcall*PrinterDestroy)(void* handle);
typedef	int(__stdcall*DirectIO)(void* handle, unsigned char writedata[], unsigned int writenum, unsigned char readdata[], unsigned int readnum, unsigned int* preadednum);
typedef	int(__stdcall*WriteData)(void* handle, unsigned char* writeData, unsigned int writeNum);
typedef int(__stdcall*PrinterInitialize)(void* handle);
typedef int(__stdcall*FeedLine)(void* handle, int lines);
typedef int(__stdcall*SetAlign)(void* handle, int align);
typedef int(__stdcall*PrintText)(void* handle, const TCHAR* data, int alignment, int attribute, int textsize);
typedef int(__stdcall*PrintBarCode)(void* handle, int bctype, const TCHAR* data, int width, int height, int alignment, int HRI_position);
typedef int(__stdcall*PrintSymbol)(void* handle, int type, const TCHAR* data, int err_level, int width, int height, int alignment);
typedef int(__stdcall*CutPaper)(void* handle, int cut_mode, int distance);
typedef int(__stdcall*OpenCashDrawer)(void* handle, int pin_mode, int on_time, int off_time);
typedef int(__stdcall*SelectStandardMode)(void* handle);
typedef int(__stdcall*SetTextLineSpace)(void* handle, int linespace);
typedef int(__stdcall*SetTextFont)(void* handle, int font);
typedef	int(__stdcall*SelectPageMode)(void* handle);
typedef	int(__stdcall*SetPrintAreaInPageMode)(void* handle, int horizontal, int vertical, int width, int height);
typedef	int(__stdcall*CancelPrintDataInPageMode)(void* handle);
typedef	int(__stdcall*SelectPrintDirectionInPageMode)(void* handle, int direction);
typedef	int(__stdcall*SetAbsolutePrintPosition)(void* handle, int position);
typedef	int(__stdcall*SetAbsoluteVerticalPrintPositionInPageMode)(void* handle, int position);
typedef	int(__stdcall*PrintAndReturnStandardMode)(void* handle);
typedef int(__stdcall*PositionNextLabel)(void* handle);
typedef	int(__stdcall*PrintDataInPageMode)(void* handle);
typedef	int(__stdcall*GetPrinterState)(void* handle, unsigned int* printer_state);
typedef int(__stdcall*SetCodePage)(void* handle, int codepage, int type);
typedef int(__stdcall*PrintImage)(void* handle, const TCHAR* filename, int scalemode);
typedef int(__stdcall*DefineNVImage)(void* handle, const TCHAR* imagepath, unsigned char kc1, unsigned char kc2);
typedef int(__stdcall*PrintNVImage)(void* handle, unsigned char kc1, unsigned char kc2);
typedef int(__stdcall*DefineBufferedImage)(void* handle, const TCHAR* imagepath);
typedef int(__stdcall*PrintBufferedImage)(void* handle);
typedef	int(__stdcall*GetFirmwareVersion)(void* handle, int* version, int version_len);
typedef	int(__stdcall*DrawRectangle)(void* handle, int xStart, int yStart, int xArea, int yArea, int lineWidth);
typedef	int(__stdcall*GetPaperFeedLinesNumber)(void* handle, unsigned int* number);
typedef	int(__stdcall*GetHeadEnergizingStrokesNumber)(void* handle, unsigned int* number);
typedef	int(__stdcall*ClearPrinterMileage)(void* handle,int clearType);
typedef	int(__stdcall*GetAutocutterOperationsNumber)(void* handle, unsigned int* number);
typedef	int(__stdcall*GetPrinterOperationPeriod)(void* handle, unsigned int* period);
typedef	int(__stdcall*GetOverTemperatureErrorReportNumber)(void* handle, unsigned int* number);
typedef	int(__stdcall*GetPrinterPointsNumber)(void* handle, unsigned int* number);
typedef	int(__stdcall*GetCutterErrorNumber)(void* handle, unsigned int* number);
typedef	int(__stdcall*GetPowerOnOpenCoverNumber)(void* handle, unsigned int* number);
typedef	int(__stdcall*GetHalfCutNumber)(void* handle, unsigned int* number);
typedef	int(__stdcall*GetTotalCutNumber)(void* handle, unsigned int* number);
typedef	int(__stdcall*ClearPrinterMileage2)(void* handle);
typedef int (__stdcall*GetPrinterSN)(void* handle, char* sn, int* snLenth);